[package]
name = "volume"
version = "0.4.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A simple dsp-chain node for multiplying the amplitude of the output buffer by some volume."
readme = "README.md"
keywords = ["audio", "dsp", "volume", "amplitude", "node"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustAudio/volume.git"
homepage = "https://github.com/RustAudio/volume"

[dependencies]
dsp-chain = "0.13.0"
time_calc = "0.11.0"
